# BaselHack24-TooLong

./: .gitignore  Procfile  license.txt  readme.md
code/backend/: .gitignore  README.MD  app.py  requirements.txt
code/chrome-extension/: background.js  content.js  manifest.json  popup.html  popup.js
code/discord-bot/: .gitignore  Cargo.toml
code/discord-bot/src/: api_commands.rs  main.rs
code/discord-bot/src/db/: mod.rs  usage_log.rs  users.rs  whitelist.rs
code/flask/: app.py  requirements.txt
code/nextjs-website/: package-lock.json  package.json
code/nextjs-website/app/: actions.ts  layout.tsx  page.tsx
code/nextjs-website/app/protected/: page.tsx
code/nextjs-website/app/summarize/: page.tsx
code/nextjs-website/app/summarize/[videoId]/: page.tsx
code/nextjs-website/components/: HistoryLoader.tsx  VideoImageFetcher.tsx  hero.tsx  summarize-button.tsx  summarize-form.tsx
code/telegram-bot/: constants.py  main.py  url_helpers.py
code/video-url-to-summary/: Main.py
documentation/: chrome.md  flask.md
