[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.2"
tokio = { version = "1.21.2", features = ["full"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json"] }
regex = "1.11.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
